@@ -28,11 +28,14 @@
 	D		elderbeholder.xml
 	A		elderbonelord.xml
 	M		monsters.xml
-	M	XML/outfits.xml
+		XML/
+	M		mounts.xml
+	M		outfits.xml
 ]
 
 [ Milestone
 	Added warmaster outfit to outfits.xml.
+	Corrected all mounts speed bonus in mounts.xml.
 	Fixed a bug in the player death script caused by the changes related to Lua interface in the previous release.
 	Fixed an issue with global events and optimized the code (it will no longer affect server performance when not being used with timers/think events).
 	Replaced "beholder" strings with "bonelord".
